Minor typos fixed.

--- a/README.tex
+++ b/README.tex
@@ -41,7 +41,7 @@ the \texttt{hpl} directory for the configuration file and use it to
 build the benchmark executable.
 
 \section{Configuration}
-The HPC~Challange is drivien by a short input file named
+The HPC~Challange is driven by a short input file named
 \texttt{hpccinf.txt} that is almost the same as the input file for
 HPL~(customarily called \texttt{HPL.dat}). Refer to the directory
 \texttt{hpl/www/tuning.html} for details about the input file for
