Fixed definition of one of the residual norms.

--- a/doc/class2specs.tex
+++ b/doc/class2specs.tex
@@ -91,7 +91,7 @@ residuals:
 \begin{eqnarray}
 r_1 = & \frac{\|Ax-b\|_{\infty}}{\epsilon \|A\|_1 n} \\
 r_2 = &\frac{\|Ax-b\|_{\infty}}{\epsilon \|A\|_1 \|x\|_1} \\
-r_3 = &\frac{\|Ax-b\|_{\infty}}{\epsilon \|A\|_{\infty} \|x\|_{\infty}}
+r_3 = &\frac{\|Ax-b\|_{\infty}}{\epsilon \|A\|_{\infty} \|x\|_{\infty} n}
 \end{eqnarray}
 where $\epsilon$ is machine precision for 64-bit floating-point values and~$n$
 is the size of the problem. The solution is valid if the following holds:
