Minor customization option for code snippets (LaTeX's verbatim environment).

--- a/README.tex
+++ b/README.tex
@@ -7,6 +7,7 @@
 % TT {color:navy}
 % H2, H3, H4 {color: #527bbd;}
 % H2 {border-bottom: 2px solid silver;}
+%.verbatim {background: #ffffee; border: 1px solid silver; padding: 0.5em;}
 % </STYLE>
 
 \documentclass[twocolumn]{article}
