--- a/README.tex
+++ b/README.tex
@@ -15,7 +15,7 @@
 \usepackage{url}
 \usepackage[margin=2cm]{geometry}
 \begin{document}
-\title{DARPA/DOE HPC~Challenge Benchmark version 1.3.1}
+\title{DARPA/DOE HPC~Challenge Benchmark version 1.3.2}
 \author{Piotr Luszczek\footnote{University of Tennessee Knoxville, Innovative
 Computing Laboratory}}
 \maketitle
@@ -210,11 +210,19 @@ through the web form at the HPC~Challenge website.
 
 \section{Source Code Changes across Versions (ChangeLog)}
 
+\subsection{Version 1.3.2 (2009-03-24)}
+\begin{enumerate}
+\item Fixed memory leaks in G-RandomAccess driver routine.
+\item Made the check for 32-bit vector sizes in G-FFT optional. MKL allows for 64-bit vector sizes in its FFTW wrapper.
+\item Fixed memory bug in single-process FFT.
+\item Update documentation (README).
+\end{enumerate}
+
 \subsection{Version 1.3.1 (2008-12-09)}
 \begin{enumerate}
-\item Fixed a dead-lock problem in FFT component due to use of wrong communicator
+\item Fixed a dead-lock problem in FFT component due to use of wrong communicator.
 \item Fixed the 32-bit random number generator in PTRANS that was using 64-bit
-routines from HPL
+routines from HPL.
 \end{enumerate}
 
 \subsection{Version 1.3.0 (2008-11-13)}
