--- a/README.tex
+++ b/README.tex
@@ -218,6 +218,7 @@ if the performance of other components was not satisfactory. RandomAccess is now
 the code.
 \item Added global initialization and finalization routine that allows to properly initialize
 and finalize external software and hardware components without changing the rest of the HPCC testing harness.
+\item Lack of \texttt{hpccinf.txt} is no longer reported as error but as a warning.
 \end{enumerate}
 
 \subsection{Version 1.3.2 (2009-03-24)}
