--- a/README.tex
+++ b/README.tex
@@ -214,6 +214,12 @@ through the web form at the HPC~Challenge website.
 
 \section{Source Code Changes across Versions (ChangeLog)}
 
+\subsection{Version 1.4.2 (2012-07-10)}
+\begin{enumerate}
+\item Reduced vector size for local FFT tests due to larger scratch space needed.
+\item Increased sizes of scratch vectors for local FFT tests to account for runs on systems with large main memory.
+\end{enumerate}
+
 \subsection{Version 1.4.1 (2010-06-01)}
 \begin{enumerate}
 \item Added optimized variants of RandomAccess that use Linear Congruential Generator for random number generation.
